@@ -1,6 +1,11 @@
 2006-08-25  Janis Johnson  <janis187@us.ibm.com>
 
 	Backport from mainline
+	 2005-11-29  Ben Elliston  <bje@au.ibm.com>
+	* decUtility.c: Remove redundant #includes.
+	* decUtility.h (__dec_byte_swap): Remove prototype.
+
+	Backport from mainline
 	2005-11-29  Ben Elliston  <bje@au.ibm.com>
 	* configure.ac: New file.
 	* aclocal.m4: Likewise.
